--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "less-loader": "^5.0.0",
     "lodash": "^4.17.15",
     "nuxt": "^2.0.0",
+    "postcss-aspect-ratio-mini": "^1.0.1",
     "vant": "^2.1.1"
   },
   "devDependencies": {
