--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
+    "cookieparser": "^0.1.0",
     "cross-env": "^5.2.0",
+    "flex.css": "^1.1.7",
     "js-cookie": "^2.2.1",
     "koa": "^2.6.2",
     "less": "^3.9.0",
