--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yun_music",
   "version": "1.0.0",
-  "description": "My wondrous Nuxt.js project",
+  "description": "网易云音乐是一款专注于发现与分享的音乐产品，依托专业音乐人、DJ、好友推荐及社交功能，为用户打造全新的音乐生活。",
   "author": "ivan",
   "private": true,
   "scripts": {
